--- a/public/contao-article-list-with-css-classes-and-ids-bundle.scss
+++ b/public/contao-article-list-with-css-classes-and-ids-bundle.scss
@@ -23,6 +23,8 @@
         padding: 3px 6px;
         margin-top: 3px; 
         margin-left: 7px;
+        transition: background .25s ease-in-out;
+        &:hover { background: #ddd; }
     }
 }
 .tl_content .limit_height {
